# tweetand_testben

./: CMakeLists.txt  README.md  toolchain-arm-none-eabi.cmake
NewProject1/: .mxproject  FreeRTOS_Nucleo_2.ioc  FreeRTOS_Nucleo_2.txt  NewProject1.depend  NewProject1.ebp  NewProject1.elay  connectie_diagram.ods  stm32f401re_flash.ld  stm32f401re_sram.ld
NewProject1/CubeMX/: FreeRTOS_Nucleo_3.ioc
NewProject1/FreeRTOS_Nucleo_2/: FreeRTOS_Nucleo_2.ioc
NewProject1/PDF_Documentation/: connectie_diagram.ods
NewProject1/SPL/src/: stm32f4xx_rcc.c
NewProject1/freertos/inc/: FreeRTOS.h  StackMacros.h  croutine.h  event_groups.h  list.h  mpu_wrappers.h  portable.h  portmacro.h  projdefs.h  queue.h  semphr.h  task.h  timers.h
NewProject1/freertos/src/: croutine.c  event_groups.c  heap_4.c  list.c  port.c  queue.c  tasks.c  timers.c
NewProject1/inc/: FreeRTOSConfig.h  LCDshield.h  analog_input.h  comm.h  data_blobs.h  dhcp.h  dhcp.h.save  dns.h  dns.h.save  kanalenlijst.h  menu.h  menu.h.save  my_helpers.h  my_queue.h  ringbuffer.h  socket.h  spliturl.h  spliturl.h.save  stm32f4xx.h  stm32f4xx_conf.h  system_stm32f4xx.h  vTaskDHCP.h  vs10xx.h  vs10xx.h.save  w5500.h  wizchip_conf.h  wizchip_hardware.h
NewProject1/src/: LCDshield.c  TaskDHCP.c  analog_input.c  analog_input.c.save  comm.c  data_blobs.c  dhcp.c  dhcp.c.save  dns.c  dns.c.save  kanalenlijst.c  main.c  main.c.save  my_helpers.c  my_helpers.c.save  ringbuffer.c  socket.c  socket.c.save  spliturl.c  system_stm32f4xx.c  term_io.c  vs10xx.c  vs10xx.c.save  w5500.c  wizchip_conf.c  wizchip_conf.c.save  wizchip_hardware.c
